--- a/views/menus.ejs
+++ b/views/menus.ejs
@@ -1,33 +1,34 @@
 <style>
-  header{
+  header {
     position: sticky;
     top: 0;
+    z-index: 999;
   }
 </style>
 
-<header class="p-2 mb-3 border-bottom bg-white">
-  <div class="container">
-    <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-    
+<header class="p-lg-2 p-1 mb-3 border-bottom bg-white">
+  <div class="container-lg">
+    <div class="d-flex flex-nowrap align-items-center justify-content-center justify-content-lg-start">
 
-      <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+
+      <ul class="flex-fill nav col-12 col-lg-auto me-lg-auto  mb-md-0">
         <li><a href="/" class="nav-link px-2 link-secondary"><%=locals.settings.name%></a></li>
         <% if (locals.user?.permissions?.includes('admin')) { %>
         <li><a href="/admin/index" class="nav-link px-2 link-secondary">admin</a></li>
         <% } %>
       </ul>
 
-      <div class="dropdown text-end">
+      <div class="flex-auto dropdown text-end">
         <% if(locals.user){ %>
 
         <a href="#" class="d-block link-body-emphasis text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
           <span><%= locals.user.account || 'undefined' %></span> <img src="<%= locals.user.avatar || '/assets/default_avatar.png' %>" alt="<%= locals.user.account %>" width="32" height="32" class="rounded-circle">
         </a>
         <ul class="dropdown-menu text-small">
-          <li><a class="dropdown-item" href="/user/<%= locals.user.account %>"><%= i18n('_dict_.personal_page') %></a></li>
-          <li><a class="dropdown-item" href="#"><%= i18n('_dict_.personal_setting') %></a></li>
-          <li><a class="dropdown-item" href="#"><%= i18n('_dict_.notify') %></a></li>
-          <li><a class="dropdown-item" href="#"><%= i18n('_dict_.draft') %></a></li>
+          <li><a class="dropdown-item" href="/u/<%= locals.user.account %>"><%= i18n('_dict_.personal_page') %></a></li>
+          <li><a class="dropdown-item" href="/user/setting/<%= locals.user.account %>"><%= i18n('_dict_.personal_setting') %></a></li>
+          <li><a class="dropdown-item" href="/user/notify/<%= locals.user.account %>"><%= i18n('_dict_.notify') %></a></li>
+          <li><a class="dropdown-item" href="/user/drafts/<%= locals.user.account %>"><%= i18n('_dict_.draft') %></a></li>
           <li>
             <hr class="dropdown-divider">
           </li>
