--- a/views/post/post.ejs
+++ b/views/post/post.ejs
@@ -13,13 +13,12 @@
   }
 
   .post-wrapper {
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     background-color: white;
     border-radius: 4px;
+    flex-wrap: wrap;
   }
 
   .post-menus {
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     background-color: white;
     border-radius: 4px;
   }
@@ -47,15 +46,17 @@
   }
 
   .post-users-wrapper {
-    border-right: 1px solid #e0e0e0; 
+    border-right: 1px solid #e0e0e0;
     white-space: nowrap;
-    background-color: #f0f0f0;
+    background-color: #fafafa;
+    border-radius: 2px;
+    max-width: 160px;
   }
 
   .user-avatar {
     border: 1px solid #cecece;
     border-radius: 4px;
-    width: 96px;
+    width: 64px;
   }
 
   .user-account {
@@ -64,39 +65,105 @@
     font-weight: bold;
   }
 
+  a.action {
+    color: #4d4d4d !important;
+    cursor: pointer;
+  }
+
   .post-content img,
   .post-content video,
-  .post-content iframe { 
-    max-width: 100% !important; 
-  }
-  .post-content {
-    max-width: 760px !important;
+  .post-content iframe {
+    max-width: 100% !important;
   }
 
+  .post-content {
+    max-width: 770px !important;
+  }
+
+  .comments {
+    border-top: 1px solid #e0e0e0;
+    flex-wrap: nowrap !important;
+  }
+
+  .invalid-editor {
+    position: absolute;
+    backdrop-filter: blur(5px);
+    z-index: 999;
+    font-size: larger;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  }
+
+  .split {
+    color: #e0e0e0;
+  }
+
+  hr.secondary {
+    color: #cfcfcf;
+  }
+
+  #reply-info {
+    padding: 8px 12px;
+    border: 1px solid #e0e0e0;
+    border-radius: 4px;
+    display: none;
+  }
+
+  .comments pre {
+    background-color: #f1f1f1;
+    padding: 8px;
+    border-radius: 4px;
+  }
 
   @media screen and (max-width: 742px) {
+
+    .post-wrapper {
+      background-color: #f8f9fa;
+    }
+
     .post-users-wrapper {
       width: 100%;
       padding: 0px;
       margin: 0px;
+      border: none;
+      background-color: #fafafa;
       display: block;
+      border-radius: 4px;
+      max-width: none;
+
+      font-size: 14px;
     }
 
     .post-wrapper {
-      flex-wrap: wrap;
+      box-shadow: none;
     }
 
-    .post-content-wrapper {
-      width: 100%;
-      padding: 4px;
+    .post-menus {
+      box-shadow: none;
     }
 
-    .user-avatar { 
-      width: 48px;
+    .comments,
+    .main-content {
+      border-top: none;
+      flex-wrap: wrap !important;
+      border: 1px solid #e0e0e0;
+      border-radius: 4px;
+      background-color: white;
+      margin: 12px 0px;
+    }
+
+    .user-avatar {
+      width: 36px;
     }
 
     .user-account {
       font-weight: bold;
+    }
+
+    .actions {
+      padding: 0px 6px;
     }
   }
 </style>
@@ -111,7 +178,7 @@
 
 <body>
   <%- include('/views/menus') %>
-  <div class=" container p-0">
+  <div class=" container p-1 p-lg-0">
     <div class="m-auto post">
       <div class=" ">
 
@@ -136,38 +203,172 @@
         </div>
 
 
-        <div class="d-flex  post-wrapper p-lg-4 p-0 mt-3">
-          <div class="post-users-wrapper pt-lg-3 m-1 me-lg-3 rounded flex-auto">
-            <div class="text-lg-center d-flex d-lg-block align-items-center p-2 p-lg-0 gap-3">
-              <div>
-                <img class="user-avatar" src="<%= post.user.avatar || '/assets/default_avatar.png' %>" alt="<%= post.user.account %>">
+        <div class="d-flex post-wrapper p-lg-4 p-0 mt-3">
+
+          <div class="d-flex flex-wrap col-12 main-content">
+            <div class="post-users-wrapper pt-lg-3 pb-lg-3 me-lg-3   flex-auto">
+              <div class="text-lg-center d-flex d-lg-block align-items-center p-2 p-lg-0 gap-3">
+                <div>
+                  <a href="/u/<%=post.user.account  %>" target="_blank">
+                    <img class="user-avatar" src="<%= post.user.avatar || '/assets/default_avatar.png' %>" alt="<%= post.user.account %>">
+                  </a>
+                </div>
+
+                <a class="flex-fill text-decoration-none" href="/u/<%=post.user.account  %>" target="_blank">
+                  <div class="text-dark  user-account"><%= post.user.account %></div>
+                </a>
+
+                <div class=" d-flex d-lg-block gap-3">
+                  <% if(post.user.nickname?.trim()){ %>
+                  <div class="d-inline-block d-lg-block"><small><%= post.user.nickname  %></small></div>
+                  <% } %>
+                  <div class="d-inline-block d-lg-block"><small>帖子：1</small></div>
+                  <div class="d-inline-block d-lg-block"><small>粉丝：1</small></div>
+                </div>
               </div>
-              <div class="flex-fill user-account"><%= post.user.account %></div>
-              <div class="user-profile pe-3 pe-lg-0">
-                <div><small>昵称：<%= post.user.nickname || '无' %></small></div>
-                <div><small>帖子：1</small></div>
-                <div><small>粉丝：1</small></div>
+            </div>
+
+            <div class="p-lg-0 p-1 flex-fill">
+              <div class="title"><b><%= post.title %></b></div>
+              <div class="d-flex flex-wrap mt-2">
+                <div class="flex-fill">
+                  <small>发布于：<%= dayjs(post.post_at)  %></small>
+                </div>
+                <div class="flex-auto">
+                  <small>查看：<%= post.statistics.comments %></small>
+                  <span class="vertical-divider"></span>
+                  <small>回帖：<%= post.statistics.comments %></small>
+                </div>
+              </div>
+              <hr style="margin-top: 6px; " />
+              <div class="post-content pt-1 pb-1">
+                <div class="d-flex flex-wrap" style=" align-content: space-between">
+                  <div class="h-auto col-12">
+                    <div class="leap"><%- post.html %></div>
+                  </div>
+                  <!-- 操作区域 -->
+                  <div class="pb-1 col-12">
+                    <hr class="mb-2 mt-2 secondary">
+                    <div class="d-flex gap-2 actions">
+                      <div class="d-flex gap-2">
+                        <% if(post.user.uid === locals.user?.uid){ %>
+                        <a class="action" href="/post/editor?category_uid=<%= post.category_uid %>&pid=<%= post.short_id %>"><small> 编辑 </small></a>
+                        <% }else{ %>
+                        <a class="action like-action"><small class="like-button"> 点赞 </small></a>
+                        <a class="action" href="#"><small> 订阅 </small></a>
+                        <small class="split"> | </small>
+                        <a class="action" href="#"><small> 举报 </small></a>
+                        <% } %>
+                      </div>
+
+
+                      <% if(post.last_edit_at){ %>
+                      <small class="split"> | </small>
+                      <small class=" text-secondary"> 最后编辑于：<%= dayjs(post.last_edit_at)   %></small>
+                      <% } %>
+
+                    </div>
+                  </div>
+
+                </div>
               </div>
             </div>
           </div>
 
 
-          <div class="post-content-wrapper flex-fill">
-            <div class="title"><b><%= post.title %></b></div>
-            <div class="d-flex flex-wrap mt-2">
-              <div class="flex-fill">
-                <small>发布于：<%= dayjs(post.post_at)  %></small>
-              </div>
-              <div class="flex-auto">
-                <small>查看：<%= post.statistics.comments %></small>
-                <span class="vertical-divider"></span>
-                <small>回帖：<%= post.statistics.comments %></small>
+          <% for(const comment of locals.comments){ %>
+          <div class="d-flex comments col-12">
+            <div class="post-users-wrapper pt-lg-3 pb-lg-3 me-lg-3 flex-auto">
+              <div class="text-lg-center d-flex d-lg-block align-items-center p-1 p-lg-0 gap-3">
+                <div>
+                  <img class="user-avatar" src="<%= comment.user.avatar || '/assets/default_avatar.png' %>" alt="<%= comment.user.account %>">
+                </div>
+                <a class="flex-fill text-decoration-none" href="/u/<%=comment.user.account  %>" target="_blank">
+                  <div class="text-dark  user-account"><%= comment.user.account %></div>
+                </a>
+                <div class="pe-3 pe-lg-0 d-flex d-lg-block gap-3">
+                  <% if(comment.user.nickname?.trim()){ %>
+                  <div class="d-inline-block d-lg-block"><small><%= comment.user.nickname  %></small></div>
+                  <% } %>
+                  <div class="d-inline-block d-lg-block"><small>帖子：1</small></div>
+                  <div class="d-inline-block d-lg-block"><small>粉丝：1</small></div>
+                </div>
               </div>
             </div>
-            <hr>
-            <div class="mt-2 post-content">
-              <div class="leap"><%- post.html %></div>
+
+            <div id="<%= comment.short_id.slice(0,6) %>" data-uid="<%= comment.uid %>" class="p-lg-0 p-1 flex-fill d-flex flex-wrap" style=" align-content: space-between">
+              <div class="pt-3 pb-1 h-auto col-12">
+                <!-- 回复内容 -->
+                <% if(comment.parent){ %>
+                <pre><a class=" text-dark text-decoration-none" href="/post/comment-redirect?pid=<%= post.short_id %>&cid=<%= comment.parent.short_id %>">#</a><small class="split"> | </small><small class="leap"><%= dayjs(comment.parent.post_at)  %></small><div class="leap "><%=  (comment.parent?.user?.nickname || comment.parent?.user?.account) + "：" +  (comment.parent?.text?.length > 20 ? comment.parent?.text.slice(0,20) + '...' : comment.parent?.text)  %></div></pre>
+                <% } %>
+                <!-- 评论内容 -->
+                <div class="leap"><%- comment.html %></div>
+              </div>
+              <div class="pb-1 col-12">
+                <hr class="mb-2 mt-2 secondary">
+                <div class="d-flex align-items-center gap-2 actions">
+                  <div class="d-flex gap-2">
+                    <a class="action" href="/p/<%= post.short_id %>?p=<%= locals.query.p || '1' %>#<%= comment.short_id.slice(0,6) %>"><small> # </small></a>
+                    <a class="action" onclick="reply('<%= comment.uid %>','<%= comment.user.account %>','<%= comment.text %>')"><small> 回复 </small></a>
+                    <% if(comment.liked){ %>
+                    <a class="action like-action text-decoration-none" onclick="toggleLike('unlike','<%= comment.short_id %>','<%= comment.uid %>')"><small class="like-button"> 已点赞 </small></a>
+                    <% }else{ %>
+                    <a class="action like-action" onclick="toggleLike('like','<%= comment.short_id %>','<%= comment.uid %>')"><small class="like-button"> 点赞 </small></a>
+                    <% } %>
+
+                    <small class="split"> | </small>
+
+                    <a class="action" href="#"><small> 举报 </small></a>
+
+                    <% if(comment.user.uid === locals.user?.uid){ %>
+                    <a class="action" href="/post/remove-comment?cid=<%= comment.uid %>"><small> 删除 </small></a>
+                    <% } %>
+
+
+                    <% if( comment.post_at){ %>
+                    <small class="split"> | </small>
+                    <small class=" text-secondary " style="font-size: 13px"> 评论于：<%= dayjs(comment.post_at)   %></small>
+                    <% } %>
+
+                  </div>
+                </div>
+              </div>
             </div>
+          </div>
+          <% } %>
+
+
+          <div class="col-12">
+
+            <hr />
+
+            <div id="reply-info">
+              <small class="flex-fill" id="reply-mes"></small>
+              <small class="flex-auto"> <a class="action cursor-pointer" onclick="cancelReply()">取消回复 X</a> </small>
+            </div>
+
+            <div class="pt-3 pb-3">
+              <% if(locals.user === undefined){ %>
+              <div class="invalid-editor">登录后才能发表评论，<a href="/passport/login" target="_blank">去登录</a></div>
+              <% } %>
+              <form class="p-0 m-0" id="editor" method="post" action="/post/comment">
+                <input name="post_uid" type="hidden" value="<%= locals.post.uid %>">
+                <input name="parent_uid" type="hidden" value="">
+                <input name="category_uid" type="hidden" value="<%= locals.post.category_uid %>">
+
+                <div id="reply-editor">
+                  <%- include('/views/components/post.editor.ejs', { height : 300, simple: true, placeholder: '发表你的评论吧...'}) %>
+                </div>
+
+                <% if(locals.user ){ %>
+                <div class="text-end">
+                  <button type="button" onclick="JoditUtils.submitComment('form')" class="btn btn-primary mt-2 " style="width: 128px;"><%= i18n('_dict_.post') %> </button>
+                </div>
+                <% } %>
+              </form>
+            </div>
+
           </div>
         </div>
       </div>
@@ -177,6 +378,66 @@
   <script>
     function back() {
       window.history.back();
+    }
+
+    const el = (selector) => document.querySelector(selector);
+
+    const resize = function() {
+      const invalidEditor = el('.invalid-editor');
+      if (invalidEditor) {
+        invalidEditor.style.width = el('#editor').clientWidth + 'px';
+        invalidEditor.style.height = el('#editor').clientHeight + 'px';
+      }
+    }
+
+    function toggleLike(action, cid, uid) {
+      fetch(`/post/like-comment?uid=${uid}`).then(res => res.text()).then(res => {
+        if (res != 'OK') {
+          return alert('操作失败');
+        }
+        const el = document.querySelector(`#${cid.slice(0,6)} .like-button`)
+        const a = document.querySelector(`#${cid.slice(0,6)} .like-action`)
+        console.log({
+          el,
+          a,
+          action
+        })
+        if (action === 'like') {
+          el.textContent = '已点赞';
+          el.title = '取消点赞';
+          a.setAttribute('onclick', `unlike('${cid}', '${uid}')`);
+          a.classList.toggle('text-secondary');
+          a.classList.toggle('text-decoration-none');
+        } else {
+          el.textContent = '点赞';
+          el.title = '点赞此评论';
+          a.setAttribute('onclick', `like('${cid}', '${uid}')`);
+          a.classList.toggle('text-secondary');
+          a.classList.toggle('text-decoration-none');
+        }
+      })
+    }
+
+
+    window.onload = () => {
+      resize()
+      window.onresize = resize;
+    }
+
+    function cancelReply() {
+      el('#reply-info').style.display = 'none';
+      el('input[name="parent_uid"]').value = '';
+      el('#reply-mes').textContent = '';
+      el('.jodit-placeholder').textContent = '发表你的评论吧...';
+    }
+
+    function reply(parent_uid, account, text) {
+      el('#reply-info').style.display = 'flex';
+      el('input[name="parent_uid"]').value = parent_uid;
+      const slice_text = String(text).length > 20 ? String(text).slice(0, 20) + '...' : String(text);
+      el('#reply-mes').textContent = `回复 ${account} : ${slice_text}`;
+      el('.jodit-placeholder').textContent = `回复 ${account} : ${slice_text}`;
+      el('#reply-editor').scrollIntoView();
     }
   </script>
 </body>
