--- a/views/render/category.ejs
+++ b/views/render/category.ejs
@@ -36,23 +36,25 @@
        border-bottom: 1px solid #eaeaea;
      }
 
-     .post .info {
-       flex: 1;
-     }
-
      .post .statistics {
-       flex: 0 auto;
        padding: 0px 6px;
        font-size: 14px;
+       white-space: nowrap;
      }
 
-     .post small {
-       font-size: 13px;
-     }
-
-     .post .title {
-       font-size: 16px;
+     .post .title a {
+       font-size: 15px; 
        font-weight: bold;
+       color: #3a3a3a !important;
+     }
+
+     .post .description {
+       font-size: 13px;
+       min-width: 300px; 
+       color: #666;
+       text-overflow: ellipsis; 
+       white-space: nowrap; 
+       overflow: hidden; 
      }
 
      .title a:hover {
@@ -62,6 +64,12 @@
      .post:hover {
        background-color: #f9f9f9;
      }
+
+     @media screen and (max-width: 768px) {
+       .category-container {
+         padding: 0px;
+       }
+     }
    </style>
 
  </head>
@@ -70,7 +78,7 @@
    <%- include('/views/menus') %>
    <div class="container category-container ">
      <div class="m-auto" style="max-width: 1200px;">
-       <div class="breadcrumbs">
+       <div class="breadcrumbs p-1 p-lg-2">
          <span class="breadcrumb"><a href="/">首页</a></span>
          <span class="breadcrumb-split">></span>
          <span class="breadcrumb"><a href="/category?id=<%= category.short_id %>"><%= category.name %></a></span>
@@ -79,52 +87,67 @@
          <div class="flex-auto">
            <img style="max-width: 86px;" src="<%= category.icon %>">
          </div>
-         <div class="felx-fill ms-lg-2">
-           <h1><%= category.name %></h1>
-           <div class="leap"><%= category.description %></div>
+         <div class="felx-fill ms-lg-2 d-flex flex-wrap align-items-center">
+           <div class="col-12 fs-1"><%= category.name %></div>
+           <div class="leap col-12"><%= category.description %></div>
          </div>
        </div>
        <hr>
-       <div class="mt-2">
-         <a href="/post/editor?category_uid=<%= category.uid %>"><button class="btn btn-primary">发表帖子 +</button></a>
-       </div>
 
-       <div class="mt-2">
-         <% if (locals.posts?.length) { %>
-         <div class="posts">
-           <% for (let i = 0 ;i < locals.posts.length; i++) {  %>
-           <% const item = locals.posts[i]; %>
-           <div class="mb-1">
-             <div class="post">
-               <div class="info">
-                 <div class="title"><a class="text-dark text-decoration-none d-inline-block w-100" href="/p/<%= item.short_id %>"><%= item.title %></a></div>
-                 <div class="d-inline">
-                   <small class="description">
+       <div class="p-1 p-lg-2">
+         <div class="mt-2">
+           <a href="/post/editor?category_uid=<%= category.uid %>"><button class="btn btn-primary">发表帖子 +</button></a>
+         </div>
+
+         <div class="mt-2">
+           <% if (locals.posts?.length) { %>
+           <div class="posts">
+             <% for (let i = 0 ;i < locals.posts.length; i++) {  %>
+             <% const item = locals.posts[i]; %>
+             <div class="mb-1">
+               <div class="post">
+                 <div class="info flex-fill">
+                   <div class="title"><a class=" text-decoration-none d-inline-block w-100" href="/p/<%= item.short_id %>"><%= item.title %></a></div>
+                   <div class="description">
                      <a href="/u/<%= item.user.account  %>"><%= item.user.account %></a>
-                     <span>：<%= item.text.length > 100 ? item.text.slice(0,100) + '...' :  item.text %></span>
-                   </small>
+                     <span>：<%= item.text.length > 100 ? item.text.slice(0,200) + '...' :  item.text %></span>
+                   </div>
+                   <div>
+                     <small>最新回帖：<%= item.user.account %></small>
+                   </div>
                  </div>
-                 <div>
-                   <small>最新回帖：<%= item.user.account %></small>
+                 <div class="statistics text-secondary flex-auto">
+                   <div>查看 : <%= item.statistics.views %></div>
+                   <div>回帖 : <%= item.statistics.comments  %></div>
                  </div>
-               </div>
-               <div class="statistics text-secondary">
-                 <div>查看 : <%= item.statistics.views %></div>
-                 <div>回帖 : <%= item.statistics.comments  %></div>
                </div>
              </div>
+             <% } %>
+           </div>
+           <% } else { %>
+           <div>
+             <%= i18n('_dict_.no_data') %>
            </div>
            <% } %>
          </div>
-         <% } else { %>
-         <div>
-           <%= i18n('_dict_.no_data') %>
-         </div>
-         <% } %>
        </div>
 
      </div>
    </div>
+
+
+   <script>
+     const resize = function() {
+       console.log(document.querySelectorAll('.description'))
+       document.querySelectorAll('.description').forEach((item) => {
+         item.style.width = (document.querySelector('.category-container').clientWidth - 200) + 'px'
+       })
+     }
+     window.onload = () => {
+       window.onresize = resize;
+       resize()
+     }
+   </script>
  </body>
 
  </html>
